@@ -93,6 +93,17 @@
 					</excludes>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        -XX:+EnableDynamicAgentLoading
+                        -Djdk.instrument.traceUsage
+                        -Xshare:off
+                    </argLine>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
